--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/client/dist/js/narrowcasting.js": "/client/dist/js/narrowcasting.js",
-    "/client/dist/styles/narrowcasting.css": "/client/dist/styles/narrowcasting.css"
+    "/client/dist/styles/narrowcasting.css": "/client/dist/styles/narrowcasting.css",
+    "/client/dist/styles/narrowcastingcms.css": "/client/dist/styles/narrowcastingcms.css"
 }
